@@ -6,7 +6,7 @@ from herbstluftwm.types import Point, Rectangle
 # Note: For unknown reasons, mouse buttons 4 and 5 (scroll wheel) do not work
 # in Xvfb when running tests in the CI. Therefore, we maintain two lists of
 # buttons:
-MOUSE_BUTTONS_THAT_EXIST = [1, 2, 3, 4, 5]
+MOUSE_BUTTONS_THAT_EXIST = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 MOUSE_BUTTONS_THAT_WORK = [1, 2, 3]
 
 
